--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 30 16:14:59 CEST 2023
-sdk.dir=C\:\\Users\\PC\\AppData\\Local\\Android\\Sdk
+#Fri Mar 31 20:24:01 WET 2023
+sdk.dir=C\:\\Users\\21269\\AppData\\Local\\Android\\Sdk
